--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/samuelsogbesan/project-a#readme",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "firebase-admin": "^9.4.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
